# techdoc-rag-lab

./: .gitignore  README.md  pyproject.toml
configs/: tech_docs_experiment.json  tech_docs_seed_experiment.json
data/tech_docs_demo/: corpus.jsonl  questions.jsonl
data/tech_docs_seed/: corpus.jsonl  questions.jsonl
reports/: failure_analysis_template.md  github_publish_checklist.md  portfolio_roadmap.md  seed_dataset_sources.md  tech_docs_dataset_plan.md
scripts/: run_experiment.py
src/chinese_rag_lab/: evaluate.py  generator.py  io_utils.py  pipeline.py  retriever.py  tokenize.py  types.py
src/techdoc_rag/: __init__.py  evaluate.py  failure_analysis.py  generator.py  io_utils.py  pipeline.py  retriever.py
tests/: test_evaluate.py  test_retriever.py
