[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chinese-rag-lab"
version = "0.1.0"
description = "面向中文计算机技术文档的 RAG 评测项目，包含基线实现、实验运行与失败案例分析。"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Albert" }
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
